--- a/index.html
+++ b/index.html
@@ -1,24 +1,28 @@
 <!DOCTYPE html>
 <html lang="en-US">
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width,initial-scale=1.0">
-        <title>Luis Giacomelli | WDD130</title>
-    </head>
-    <body>
-        <header>
-            <nav>
-                <a href="#">Home</a>
-                <a href="wwr/">Rafting website</a>
-            </nav>
-        </header>
-        <main>
-            <h1>Luis Giacomelli | WDD130</h1>
-            <img src="images/profile.webp" alt="Luis" width="200">
-            <p>Hello! I'm Luis Giacomelli from Argentina, I married with Daniela and we like to drink Mate and listen to music</p>
-        </main>
-        <footer>
-            <p>&copy; 2025 - Luis Giacomelli - Buenos Aires, Argentina</p>
-        </footer>
-    </body>
+
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <title>Luis Giacomelli | WDD130</title>
+</head>
+
+<body>
+    <header>
+        <nav>
+            <a href="#">Home</a>
+            <a href="wwr/">Rafting website</a>
+        </nav>
+    </header>
+    <main>
+        <h1>Luis Giacomelli | WDD130</h1>
+        <img src="images/profile.webp" alt="Luis" width="200">
+        <p>Hello! I'm Luis Giacomelli from Argentina, I married with Daniela and we like to drink Mate and listen to
+            music</p>
+    </main>
+    <footer>
+        <p>&copy; 2025 - Luis Giacomelli - Buenos Aires, Argentina</p>
+    </footer>
+</body>
+
 </html>
