--- a/Week02/holygrail.html
+++ b/Week02/holygrail.html
@@ -38,7 +38,7 @@
             alt="Nigeria temple" width="200">
     </aside>
     <footer>
-        Luis Giacomelli
+        Luis Giacomelli.
     </footer>
 </body>
 
