W02 Assignment: Home Page Enhancement

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>Luis Giacomelli | WDD130</title>
+    <meta name="description" content="Luis Giacomelli, WDD130, Studen's Home Page">
+    <meta name="author" content="Luis Giacomelli">
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 
@@ -21,6 +23,12 @@
         <p>Hello! I'm Luis Giacomelli from Argentina, I married with Daniela and we like to drink Mate and listen to
             music</p>
     </main>
+    <aside>
+        <h2>Buenos Aires, Argentina</h2>
+        <img src="images/buenos-aires.webp" alt="Buenos Aires, Argentina" width="200">
+        <p>Argentina's capital is Buenos Aires. El Obelisco is a historic monument considered an icon of Buenos Aires,
+            located on the 9 de Julio avenue.</p>
+    </aside>
     <footer>
         <p>&copy; 2025 - Luis Giacomelli - Buenos Aires, Argentina</p>
     </footer>
