About us: Title, description content and  alt text ( hero rafting photo background) correction.

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About us</title>
+    <title>About us - Rafting Travel</title>
 
-    <meta name="description" content="About us page for white water rafting">
+    <meta name="description" content="The About us section from the Rafting Travel website">
     <meta name="author" content="Luis Giacomelli">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -29,7 +29,7 @@
     </header>
     <main>
         <div class="hero">
-            <img src="images/rafting16_1024.webp" alt="hero image background">
+            <img src="images/rafting16_1024.webp" alt="hero rafting photo background">
             <h1>Rafting Travel</h1>
             <article>
                 <img src="images/rafting-happy.webp" alt="Happy clients">
