Changes in the name of img background

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -29,7 +29,7 @@
     </header>
     <main>
         <div class="hero">
-            <img src="images/rafting16_1024.webp" alt="hero rafting photo background">
+            <img src="images/raftingbackground.webp" alt="rafting photo background">
             <h1>Rafting Travel</h1>
             <article>
                 <img src="images/rafting-happy.webp" alt="Happy clients">
