update rafting.css according to the wireframe

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -36,17 +36,38 @@
                 <p>company purpose, mission, creed, motto, etc.</p>
             </article>
         </div>
-        <section>
+        <section class="history">
             <h2>History</h2>
-            <p>History of the company</p>
+            <p>History of the company Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium explicabo
+                minus id consequuntur dolor? Tenetur, quibusdam magnam omnis ex dicta fugit recusandae quas aliquid
+                labore id similique porro, dolorum ab.</p>
+            <img src="images/historyimg.webp" alt="historyimg">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis temporibus, nostrum ipsa maiores
+                voluptates ab vero eveniet velit vel, labore facilis cum repellat. Nisi voluptate illo ut unde quaerat
+                dignissimos?</p>
         </section>
-        <section>
+        <section class="adventure">
             <h2>Adventure Awaits You!</h2>
-            <img src="images/AdventureAwaitsYou-1.webp" alt="AdventureAwaitsYou-1">
-            <img src="images/AdventureAwaitsYou-2.webp" alt="AdventureAwaitsYou-2">
-            <img src="images/AdventureAwaitsYou-3.webp" alt="AdventureAwaitsYou-3">
-            <img src="images/AdventureAwaitsYou-4.webp" alt="AdventureAwaitsYou-4">
-            <img src="images/AdventureAwaitsYou-5.webp" alt="AdventureAwaitsYou-5">
+            <figure>
+                <img src="images/AdventureAwaitsYou-1.webp" alt="AdventureAwaitsYou-1">
+                <figcaption>Rio Mendoza</figcaption>
+            </figure>
+            <figure>
+                <img src="images/AdventureAwaitsYou-2.webp" alt="AdventureAwaitsYou-2">
+                <figcaption>Potrerillos</figcaption>
+            </figure>
+            <figure>
+                <img src="images/AdventureAwaitsYou-3.webp" alt="AdventureAwaitsYou-3">
+                <figcaption>Rio Mendoza 2</figcaption>
+            </figure>
+            <figure>
+                <img src="images/AdventureAwaitsYou-4.webp" alt="AdventureAwaitsYou-4">
+                <figcaption>Rio Atuel, San Rafael</figcaption>
+            </figure>
+            <figure>
+                <img src="images/AdventureAwaitsYou-5.webp" alt="AdventureAwaitsYou-5">
+                <figcaption>Rio Atuel</figcaption>
+            </figure>
         </section>
     </main>
     <footer>
