--- a/wwr/about.html
+++ b/wwr/about.html
@@ -19,7 +19,7 @@
 
 <body>
     <header>
-        <img src="images/raftingsitelogo.jpg" alt="Rafting Company Logo">
+        <img src="images/raftingsitelogo.webp" alt="Rafting Company Logo">
         <nav>
             <a href="index.html">Home</a>
             <a href="about.html">About us</a>
@@ -74,13 +74,13 @@
         <p>&copy; 2025 - Luis Giacomelli</p>
         <nav class="socialmedia">
             <a href="https://www.facebook.com/">
-                <img src="images/facebook.png" alt="facebook" width="30">
+                <img src="images/facebook.webp" alt="facebook" width="30">
             </a>
             <a href="https://x.com/">
-                <img src="images/twitter.png" alt="twitter" width="30">
+                <img src="images/twitter.webp" alt="twitter" width="30">
             </a>
             <a href="https://www.instagram.com/">
-                <img src="images/instagram.png" alt="instagram" width="30">
+                <img src="images/instagram.webp" alt="instagram" width="30">
             </a>
         </nav>
     </footer>
