--- a/wwr/about.html
+++ b/wwr/about.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Luis Giacomelli | Rafting Project: About Us Page</title>
+    <title>Luis Giacomelli | Rafting Travel: About Us Page</title>
 
     <meta name="description" content="The About us section from the Rafting Travel website">
     <meta name="author" content="Luis Giacomelli">
