Style embedded in html was deleted

--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -34,29 +34,29 @@
         </section>
         <section class="contactinfo-section">
             <section class="contactinfo">
-                <div style="display: flex;">
+                <div>
                     <h3>Address:</h3>
                     <p>123 street, Mendoza</p>
                 </div>
-                <div style="display: flex;">
+                <div>
                     <h3>Phone nummber:</h3>
                     <p>+54 9 2233-445566</p>
                 </div>
-                <div style="display: flex;">
+                <div>
                     <h3>email:</h3>
                     <a href="mailto:rafting@email.com">raftingtravel@email.com</a>
                 </div>
             </section>
             <section class="contactinfo">
-                <div style="display: flex;">
+                <div>
                     <h3>Address:</h3>
                     <p>456 street, San Rafael, Mendoza</p>
                 </div>
-                <div style="display: flex;">
+                <div>
                     <h3>Phone nummber:</h3>
                     <p>+54 9 2233-445566</p>
                 </div>
-                <div style="display: flex;">
+                <div>
                     <h3>email:</h3>
                     <a href="mailto:rafting@email.com">raftingtravel@email.com</a>
                 </div>
@@ -65,12 +65,12 @@
         <div class="map">
             <iframe
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d860165.736932379!2d-69.42257653109833!3d-32.632226675991056!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x96808f2ecdeb96e1%3A0xdacb0136fd64c243!2sR%C3%ADo%20Mendoza!5e0!3m2!1ses-419!2sar!4v1750127917903!5m2!1ses-419!2sar"
-                width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                width="600" height="450" allowfullscreen="" loading="lazy"
                 referrerpolicy="no-referrer-when-downgrade"></iframe>
 
             <iframe
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d26202.728264730507!2d-69.97562487026555!3d-34.82251709518505!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x967b1c44cb883985%3A0x3634fe9439a87d!2sR%C3%ADo%20Atuel!5e0!3m2!1ses-419!2sar!4v1750128180776!5m2!1ses-419!2sar"
-                width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                width="600" height="450" allowfullscreen="" loading="lazy"
                 referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
         <section class="employee">
