Trips and Index pages were created

--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -126,13 +126,12 @@
             </form>
         </section>
     </main>
-    <footer id="contact">
+    <footer>
         <section>
-            <p>&copy; 2025 - Luis Giacomelli</p>
-            <nav class="wireframe">
-                <a href="https://app.moqups.com/h87YNXLMU0a0tbmolonRkuuoiH1jLdna/view/page/ad64222d5">Contact Us
+            <p>&copy; 2025 - Luis Giacomelli - <a
+                    href="https://app.moqups.com/h87YNXLMU0a0tbmolonRkuuoiH1jLdna/view/page/ad64222d5">Contact us
                     wireframe</a>
-            </nav>
+            </p>
         </section>
         <nav class="socialmedia">
             <a href="https://www.facebook.com/">
