--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -113,7 +113,7 @@
                         <label for="websitesuggestion">Web suggestion.</label>
                     </div>
                     <div class="feedback">
-                        <label for="comment"></label>
+                        <label for="comment">Comment</label>
                         <textarea name="comment" id="comment" rows="4"
                             placeholder="Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim, exercitationem."></textarea>
                     </div>
