--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -39,17 +39,20 @@
             <figure class="trips1">
                 <img src="images/AdventureAwaitsYou-1.webp" alt="Trips_1">
                 <h2>Rio Mendoza.</h2>
-                <p>Live the incredible adventure of White Water Rafting in a wanderful place, Rio Mendoza in Mendoza, Argentina. Rio Mendoza has excellent natural landscapes.</p>
+                <p>Live the incredible adventure of White Water Rafting in a wanderful place, Rio Mendoza in Mendoza,
+                    Argentina. Rio Mendoza has excellent natural landscapes.</p>
             </figure>
             <figure class="trips2">
                 <img src="images/homeimg1.webp" alt="Trips_2">
                 <h2>Rio Atuel, San Rafael.</h2>
-                <p>In Rio Atuel, San Rafael you will enjoy an unique experience. The landscapes, staf and affordable price it will do unforgettable</p>
+                <p>In Rio Atuel, San Rafael you will enjoy an unique experience. The landscapes, staf and affordable
+                    price it will do unforgettable</p>
             </figure>
             <figure class="trips1">
                 <img src="images/AdventureAwaitsYou-3.webp" alt="Trips_3">
                 <h2>Potrerillos</h2>
-                <p>We have an excellent certificated Staff with the latest knowledge to provide you guide, safety and a good trip. We have the equipment and instructors that you need</p>
+                <p>We have an excellent certificated Staff with the latest knowledge to provide you guide, safety and a
+                    good trip. We have the equipment and instructors that you need</p>
             </figure>
         </section>
         <section class="table">
@@ -57,7 +60,7 @@
                 <caption>Travel Rafting</caption>
                 <thead>
                     <tr>
-                        <th scope="col"></th>
+                        <th scope="col" class="empty"></th>
                         <th scope="col">San Rafael</th>
                         <th scope="col">Mendoza</th>
                     </tr>
