modification on trips table

--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -60,7 +60,7 @@
                 <caption>Travel Rafting</caption>
                 <thead>
                     <tr>
-                        <th scope="col" class="empty"></th>
+                        <th scope="col">Site</th>
                         <th scope="col">San Rafael</th>
                         <th scope="col">Mendoza</th>
                     </tr>
